--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
         "vue": "^3.0.5",
         "vue-loader": "^16.1.2",
         "webpack-node-externals": "^3.0.0"
+    },
+    "dependencies": {
+        "npm": "^8.7.0"
     }
 }
