--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=ba3fae3653bda4ef20d4ef9d75b6625b",
+    "/css/app.css": "/css/app.css?id=b4044c2d40e5fc7b16cbe7879b001a34"
 }
