--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
+        "doctrine/dbal": "^3.6",
         "fakerphp/faker": "^1.9.1",
         "laravel/breeze": "^1.9",
         "laravel/sail": "^1.0.1",
